manifests/loader/loader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loader
  template:
    metadata:
      labels:
        app: loader
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: rs-dev-workshop-loader
          image: rs-dev-workshop/loader:latest
          ports:
            - name: http
              containerPort: 5000
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          volumeMounts:
            - name: persistent-storage
              mountPath: /rs-data
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-claim
