manifests/loader/loader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loader
spec: 
  type: ClusterIP
  selector:
    app: loader
  ports:
  - name: http
    port: 5000
    targetPort: 5000
